# interview

./: .dockerignore  .gitignore  .lintstagedrc.js  .output.txt  .pre-commit-config.yaml  .prettierrc  Dockerfile  Makefile  README.md  SakethInterview  SakethInterview_PySpark  SubmissionTesting.md  argocd-application.yaml  artillery.Dockerfile  compose.yaml  devbox.json  docker-compose.yml  docker-test.yml  load-test-docker.sh  load-test-processor.js  load-test.yml  package-lock.json  package.json  pom.xml  quick-test.yml  vercel.json
data/: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  DESIGN_DECISIONS.md  DEV_INSTRUCTIONS.md  DISTRIBUTED_IMPROVEMENTS.md  Dockerfile  FAQ.md  Makefile  OVERVIEW.md  PROJDESC.md  Pipfile  README.md  README_DETAILED.md  REFACTORED_README.md  SETUP.md  SETUP_PYTHON_PROJECT.md  SETUP_WORKFLOW.md  SOLUTION.md  SUMMARY.md  USAGE.md  aggregations.py  analyze.py  bootstrap.sh  check.sh  clean_data.py  config.py  conftest.py  data.py  demo.py  docker-compose.yml  docker-entrypoint.sh  env.template  extractor.py  fetch.py  fix.sh  flatter_and_enrich.py  (+40 more)
data/aggregators/: base_aggregator.py  neo_count.py  neo_count_per_year.py
data/aws_deployment/: Dockerfile  aws_deployment_info.template.json  deploy_to_aws.py  inference.py  task-definition.template.json  test_api.py  test_api_external.py
data/aws_deployment/models/: feature_scaler.joblib  inference_sample.json  input_feature_stats.json  lstm_model.pt  model_metadata.json  seq_scaler.joblib  target_scaler.joblib  transformer_model.pt
data/config/: scraper.yaml  settings.py
data/data/: config.py  main.py  nasa_client.py  process.py  schemas.py
data/data/neo/: aggregations_20250519_095947.json  manual_200.parquet  neo_data_20250519_095944.parquet
data/dev/: data_explore.ipynb  sample_data.json
data/docs/: README.md  classes.uxf
data/file/approach_count_year.parquet/: .part-00000-1c477b0d-6947-4525-8458-08054d8a95c5-c000.snappy.parquet.crc  part-00000-1c477b0d-6947-4525-8458-08054d8a95c5-c000.snappy.parquet
data/file/closer_approach.parquet/: .part-00000-de30ad69-452c-47a6-9999-feb5ee057439-c000.snappy.parquet.crc  part-00000-de30ad69-452c-47a6-9999-feb5ee057439-c000.snappy.parquet
data/file/neo_data_closest.parquet/: .part-00000-9d219c2b-2854-47aa-8b95-97ed87a5f340-c000.snappy.parquet.crc  part-00000-9d219c2b-2854-47aa-8b95-97ed87a5f340-c000.snappy.parquet
data/file/neo_data_flat.parquet/: .part-00000-1461279e-bf6f-41c8-95d2-9ddd3597a4b9-c000.snappy.parquet.crc  part-00000-1461279e-bf6f-41c8-95d2-9ddd3597a4b9-c000.snappy.parquet
data/jh-interview/nasa-neows/: README.md  pyproject.toml  sample.json
data/jobs/: aggregate_data.py  fetch_data.py
data/models/: asteroid.py
data/modules/: data_aggregator.py  data_fetcher.py
data/nasa_neo_assessment/: .gitignore  README.md  pyproject.toml
data/nasa_neo_assessment/tests/: conftest.py  test_bronze.py  test_gold.py  test_pipeline_helpers.py  test_silver.py
data/neo/: logger.py
data/neo/handlers/: base.py  pandas_handler.py  schema.py
data/neo/ingesters/: base.py  sync_ingester.py
data/neo/storage/: base.py  local_storage.py
data/neo_data/scraper/: data_gathering.py  data_processing.py  persistence.py  request_handler.py  scraper.py
data/notebooks/: data_parsing_and_exploration.ipynb
data/orchestration/: orchestrator.py
data/persistence/: base_serializer.py  json_local_serializer.py  parquet_local_serializer.py
data/recall/: errors.py  file_storage.py  main.py  recall_data_extractor.py  recall_data_fetcher.py
data/s3_bucket/: README.md
data/scrapers/: base_scraper.py  nasa_neo_ws_scraper.py
data/solution-argo-workflow/: Tiltfile  neo-workflow.yaml
data/sql/: all_data.sql  approach_count_year.sql  closer_approach.sql  closest_data.sql
data/src/: Model Building.ipynb  __init__.py  aggregation_engine.py  api_client.py  clients.py  conf.py  config.py  data_collector.py  data_extractor.py  data_processor.py  data_transformer.py  distributed_api_client.py  distributed_data_processor.py  distributed_neo_processor.py  entities.py  errors.py  exceptions.py  fetch_neo.py  logging_config.py  main.py  models.py  neo_processor.py  pipeline.py  s3_utils.py  service.py  storage.py  storage_manager.py  verify_neo_output.py
data/tekmetric_data/: __init__.py  __main__.py  data.py  logging_config.yaml  metric.py  nasa_client.py  output.py
data/tests/: conftest.py  test_aggregations.py  test_api_client.py  test_cli.py  test_config.py  test_core.py  test_data.py  test_data_processor.py  test_fetch_neo.py  test_file_manager.py  test_handler.py  test_ingester.py  test_init.py  test_integration.py  test_main.py  test_metric.py  test_nasa_client.py  test_output.py  test_process.py  test_recall_data_extractor.py  test_recall_data_fetcher.py  test_recall_notice_entity.py  test_settings.py  test_storage.py  test_workflow.py
data/utils/: api_client.py  data_processor.py  file_manager.py
django-backend/: Procfile  pyproject.toml  requirements.txt
django-backend/event_management/: db.sqlite3  settings.py  urls.py
django-backend/events/: middleware.py  models.py  serializers.py  urls.py  views.py
qa/: .env  (+15 more)
(+15840 files in other folders)
