[project]
name = "data"
version = "0.1.0"
description = ""
authors = [
    {name = "theauthor001"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pre-commit = "^4.2.0"
pyright = "^1.1.400"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
]

[tool.pyright]
exclude = ["**/__pycache__"]
venvPath = "data"
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
enableTypeIgnoreComments = true
reportGeneralTypeIssues = "warning"
strictListInference = true
strictDictionaryInference = true
