[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = ""
authors = ["norbert-bc <norbert.bereczki@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
django = "^5.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
gunicorn = "^23.0.0"
django-heroku = "^0.3.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
