[project]
name = "nasa-neows"
version = "0.1.0"
description = "NASA Near Earth Object data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.4",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nasa-neows = "nasa_neows.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nasa_neows --cov-report=term-missing"

[tool.coverage.run]
source = ["src/nasa_neows"]
omit = ["src/nasa_neows/dashboard.py"]

[tool.coverage.report]
fail_under = 90
